--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "nodejs-typescript",
+  "name": "bookstore",
   "version": "1.0.0",
-  "main": "index.ts",
-  "type": "module",
+  "author": "Raphael Guerra",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev src/server.ts",
+    "test": "jest"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "node-fetch": "^3.3.1",
-    "pg": "^8.13.0"
+    "bcrypt": "^5.1.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "pg": "^8.6.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.13",
-    "@types/node": "^20.10.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.12",
+    "@types/jest": "^27.0.2",
     "@types/pg": "^8.11.10",
-    "jest": "^29.7.0",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "tsx": "^4.7.1",
-    "typescript": "^5.6.3"
-  },
-  "keywords": [],
-  "description": ""
+    "jest": "^27.2.5",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.2"
+  }
 }
